[package]
name = "flint-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for flint projects"

[[bin]]
name = "flint"
path = "src/main.rs"

[dependencies]
flint = { path = "../flint" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
